# offsite-demo

./: .gitignore  README.md  hello.py  pyproject.toml
app_store_reviews/: .env.example  eval_app_store_reviews.py
app_store_reviews/baml_src/: analyze_app_review.baml  app_store_review_analysis.baml  clients.baml  generators.baml  tests.baml  types.baml
data/: ground_truth_dataset.csv
